Changed Phasmophobia font color to white.

--- a/src/Modules/Phasmophobia/phasmophobia.html
+++ b/src/Modules/Phasmophobia/phasmophobia.html
@@ -17,6 +17,10 @@
 			padding: 0;
 			background-color: #00000040;
 		}
+		
+		.whitey {
+			color: white;
+		}
 
 		.grid-container {
 			/*background-color: #2196F3;*/
@@ -76,7 +80,7 @@
 <body>
 <div class="main" id="all">
 	<div id="evidence" class="grid-container">
-		<div id="ghostNameContainer" class="grid-header">Name: <span id="ghostName">John Smith</span></div>
+		<div id="ghostNameContainer" class="grid-header whitey">Name: <span id="ghostName" class="whitey">John Smith</span></div>
 <!--		<div class="grid-item container"><div class="sub"><img class="center sq" src="images/Off.png"><img class="center sq" src="./images/box.png"></div></div>-->
 <!--		<div class="grid-item container"><div class="sub"><img class="center sq" src="images/Off.png"></div></div>-->
 <!--		<div class="grid-item container"><div class="sub"><img class="center sq" src="images/Off.png"></div></div>-->
