--- a/src/Modules/Phasmophobia/phasmophobia.html
+++ b/src/Modules/Phasmophobia/phasmophobia.html
@@ -74,19 +74,26 @@
 			/*max-width: 300px;*/
 			height: 100%;
 		}
+
+		.overlay {
+			position: absolute;
+            left: 0;
+            top: 0;
+			width: 100%;
+			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
 	</style>
 </head>
 
 <body>
 <div class="main" id="all">
 	<div id="evidence" class="grid-container">
-		<div id="ghostNameContainer" class="grid-header whitey">Name: <span id="ghostName" class="whitey">John Smith</span></div>
-<!--		<div class="grid-item container"><div class="sub"><img class="center sq" src="images/Off.png"><img class="center sq" src="./images/box.png"></div></div>-->
-<!--		<div class="grid-item container"><div class="sub"><img class="center sq" src="images/Off.png"></div></div>-->
-<!--		<div class="grid-item container"><div class="sub"><img class="center sq" src="images/Off.png"></div></div>-->
-<!--		<div class="grid-item container"><div class="sub"><img class="center sq" src="images/Off.png"></div></div>-->
-<!--		<div class="grid-item container"><div class="sub"><img class="center sq" src="images/Off.png"></div></div>-->
-<!--		<div class="grid-item container"><div class="sub"><img class="center sq" src="images/Off.png"></div></div>-->
+		<div id="nameContainer" class="grid-header whitey">Name: <span id="name" class="whitey"></span></div>
+        <div id="ghostContainer" class="overlay name">
+            <img id="ghost" class="overlay" src="" alt="">
+        </div>
 	</div>
 </div>
 
