--- a/src/Modules/ImageDisplay/imgdisp.html
+++ b/src/Modules/ImageDisplay/imgdisp.html
@@ -44,6 +44,7 @@
 	</style>
 </head>
 <body id="output">
+<div id="soundholder"></div>
 <div id="imageholder" class='hide-on-startup'>
 	<!-- 
 		Added an 'inner' wrapper rather than applying the style to the image
