--- a/src/Modules/Phasmophobia/phasmophobia.html
+++ b/src/Modules/Phasmophobia/phasmophobia.html
@@ -10,14 +10,21 @@
     <link rel="shortcut icon" href="#" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<style>
-		html, body, .main {
+		html, body {
+			width: 100%;
+			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
+		
+		.main {
 			width: 100%;
 			height: 100%;
 			margin: 0;
 			padding: 0;
 			background-color: #00000040;
 		}
-		
+
 		.whitey {
 			color: white;
 		}
