Video assets; Trivia: Changing settings doesn't stop the game.

--- a/src/Modules/ImageDisplay/imgdisp.html
+++ b/src/Modules/ImageDisplay/imgdisp.html
@@ -56,6 +56,11 @@
 		<img id='actualimg' class='shadowfilter' src="" alt="">
 	</div>
 </div>
+<div id="videoholder">
+	<video id="actualvideo" class="inner">
+		<source id="videosource" src="" type="video/mp4">
+	</video>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <!-- This is to prevent the speech bubble from showing up when the page
