Wheel: Mostly done!
The wheel module currently:
- Supports multiple wheels
- Shows a video at the beginning
- Only allows the selected user or mods (and above) to spin the wheel, and only once it is visible
- The result shows up when the wheel stops spinning, using a neon effect and surrounded with an image border (might be customizable later on)

Missing:
- Prize announcement configuration
- Wheel background image and position indicator (arrow pointing to what's selected)
- Possibly rotating an image along with the wheel (for the bus image)

--- a/src/GUI/config.html
+++ b/src/GUI/config.html
@@ -689,6 +689,16 @@
 <!--						</div>-->
 							</div>
 						</div>
+						<!-- Wheel Segment --> <div class="uk-child-width-expand uk-grid uk-margin-small-top uk-flex-nowrap">
+							<div class="uk-child-width-expand uk-grid uk-margin-small-top uk-flex-nowrap" uk-tooltip="Server port">
+								<h3 class="uk-width-1-6">Value</h3>
+								<div class="uk-width-expand">
+									<input id="wheel-segment-value" class="uk-input uk-hei" type="text">
+								</div>
+								<h3 class="uk-width-small">Color</h3>
+								<input type="color" class="uk-width-small">
+							</div>
+						</div>
 						<!-- Commented-out Code --> <div>
 <!--						<div>-->
 <!--							<div class="uk-container uk-margin-top uk-margin-bottom">-->
