--- a/src/Modules/ImageDisplay/imgdisp.html
+++ b/src/Modules/ImageDisplay/imgdisp.html
@@ -58,7 +58,7 @@
 </div>
 <div id="videoholder">
 	<video id="actualvideo" class="inner">
-		<source id="videosource" src="" type="video/mp4">
+		<source id="videosource" src="">
 	</video>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
