Wheel: Pretty much done!
The wheel module now also supports:
- Wheel background image and position indicator (arrow pointing to what's selected) - the background image rotates with the wheel

Missing:
- Prize announcement configuration
- Possibly an option to choose whether or not the background image should spin with the wheel

OBS Control:
Currently in the process of writing code to generate entities for OBS control based on variables in the protocol, so as not to need to create them fully each time I add something.

--- a/src/Modules/Wheel/wheel.html
+++ b/src/Modules/Wheel/wheel.html
@@ -11,10 +11,14 @@
 </head>
 <body>
 
-<div>
-    <video id="video" class="centered" src="">
-    </video>
+<video id="video" class="centered front" src="">
+</video>
+
+<div class="centered">
+    <img id="marker" src="" alt="">
 </div>
+
+<img id="bgImage" class="centered back" src="" alt="">
 
 <canvas id="canvas">
     Canvas not supported, use another browser.
