--- a/src/Modules/TreasureHunt/treasure.html
+++ b/src/Modules/TreasureHunt/treasure.html
@@ -26,22 +26,22 @@
 		}
 
 		.grid-container {
-			background-color: #2196F3;
+			background-color: #2196F340;
 			display: grid;
 			/*grid-template-columns: auto auto auto;*/
 			/*grid-template-rows: auto 1fr 1fr;*/
 			/*grid-template-areas: 'header header header' 'main main main' 'main main main';*/
-			padding: 6px;
-			grid-gap: 10px;
+			padding: 0;
+			grid-gap: 0;
 			height: 100%;
 		}
 
 		/*noinspection ALL*/
 		.grid-item {
-			background-color: rgba(255, 255, 255, 0.8);
+			background-color: rgba(255, 255, 255, 0.3);
 			/*border: 1px solid rgba(0, 0, 0, 0.8);*/
-			padding: 20px;
-			margin: 3px;
+			padding: 10px;
+			margin: 0px;
 			font-size: 30px;
 			text-align: center;
 		}
