Added time triggers and media display toggle.
Also a few document updates.

--- a/src/Modules/ImageDisplay/imgdisp.html
+++ b/src/Modules/ImageDisplay/imgdisp.html
@@ -44,6 +44,7 @@
 	</style>
 </head>
 <body id="output">
+<div id="named"></div>
 <div id="soundholder"></div>
 <div id="imageholder" class='hide-on-startup'>
 	<!-- 
