--- a/src/GUI/cfg.html
+++ b/src/GUI/cfg.html
@@ -90,7 +90,7 @@
 				<div class="uk-child-width-1-2@s uk-padding-small" uk-grid>
 					<ul id="configViewSwitcher" class="uk-width-auto@m uk-tab-left uk-width-auto@m" uk-tab uk-switcher="connect: #configView">
 						<li class="uk-active"><a id="mainTabTitle" href="#">Main</a></li>
-						<li><a id="modulesTabTitle" href="#">Modules</a></li>
+						<li><a id="modulesTabTitle" href="#">Features</a></li>
 					</ul>
 					<ul id="configView" class="uk-switcher switcher-container uk-width-expand@m">
 						<li id="main" class="uk-child-width-expand" uk-grid>
