--- a/src/Modules/TextDisplay/Styles/Regular/Regular.html
+++ b/src/Modules/TextDisplay/Styles/Regular/Regular.html
@@ -13,42 +13,30 @@
     	body {
     		margin: 0;
     		padding: 0;
+		    font-size: 100px;
+		    line-height: 100vh;
+		    color: #fff;
     	}
     	
-    	iframe {
-    		border: 0;
-    		width: 100%;
-    		height: 100%;
-    	}
-
-        /*noinspection CssUnusedSymbol*/
-        .frameholder {
-    		display: block;
-    		position: absolute;
-    		width: 100%;
-    		height: 100%;
-    		margin: 0;
-    		padding: 0;
-    	}
-
-        /*noinspection CssUnusedSymbol*/
-    	.framediv {
-    		display: block;
-    		position: absolute;
-    		width: 100%;
-    		height: 100%;
-    		margin: 0;
-    		padding: 0;
-    	}
+	    .displayText {
+		    display: inline-block;
+		    vertical-align: middle;
+		    width: 100%;
+		    outline: none;
+		    text-align: center;
+		    line-height: 1;
+	    }
     </style>
 </head>
 
 <body>
 
+<div id="textContainer" class="displayText"></div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script type="module" src="/common/moduleClient.mjs"></script>
-<!-- <script src="regular.js"></script> -->
+<script type="module" src="Regular.mjs"></script>
 
 </body>
 </html>
