--- a/src/Modules/StreamRaiders/streamRaiders.html
+++ b/src/Modules/StreamRaiders/streamRaiders.html
@@ -10,11 +10,19 @@
 </head>
 <body>
 <div id="skinathonRoad" class="bottom-center">
-    <img src="assets/RoadNormal.png" alt="X" class="road-element">
-    <img id="traveled" src="assets/RoadTraveled.png" alt="X" class="road-element road-overlay">
-    <img id="progress-panel" src="assets/ProgressPanel.png" alt="X" class="absolute">
+    <img src="assets/RoadNormal.png" alt="" class="road-element">
+    <img id="traveled" src="assets/RoadTraveled.png" alt="" class="road-element road-overlay">
+    <img id="progress-panel" src="assets/ProgressPanel.png" alt="" class="absolute">
     <div id="progress-sp-container" class="absolute">
         <span id="progress-sp" class="absolute">0</span>
+    </div>
+    <div id="characters" class="character-wrapper">
+        <div class="character-grid">
+            <img src="tmp/0-idle.gif" alt="" class="character">
+            <img src="tmp/1-idle.gif" alt="" class="character">
+            <img src="tmp/2-idle.gif" alt="" class="character">
+            <img src="tmp/3-idle.gif" alt="" class="character">
+        </div>
     </div>
 </div>
 
