--- a/src/Modules/StreamRaiders/streamRaiders.html
+++ b/src/Modules/StreamRaiders/streamRaiders.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="skinathonRoad" class="bottom-center">
-    <img src="assets/RoadNormal.png" alt="" class="road-element">
+    <img src="assets/RoadNormal.png" alt="" class="road-element road-bg">
     <img id="traveled" src="assets/RoadTraveled.png" alt="" class="road-element road-overlay">
     <img id="progress-panel" src="assets/ProgressPanel.png" alt="" class="absolute">
     <div id="progress-sp-container" class="absolute">
@@ -18,10 +18,16 @@
     </div>
     <div id="characters" class="character-wrapper">
         <div class="character-grid">
-            <img src="tmp/0-idle.gif" alt="" class="character">
-            <img src="tmp/1-idle.gif" alt="" class="character">
-            <img src="tmp/2-idle.gif" alt="" class="character">
-            <img src="tmp/3-idle.gif" alt="" class="character">
+            <img src="" alt="" class="character">
+            <img src="" alt="" class="character">
+            <img src="" alt="" class="character">
+            <img src="" alt="" class="character">
+        </div>
+    </div>
+    <div id="milestones" class="bottom-left milestone-container">
+        <div class="milestone" style="left: 0;">
+            <img src="./tmp/sign.png" alt="" class="milestone-item milestone-bg" style="bottom: 0; left: 0;">
+            <img src="./tmp/flag.gif" alt="" class="milestone-item milestone-reward" style="bottom: 10px; left: 0; width: 120px; height: 120px;">
         </div>
     </div>
 </div>
