--- a/src/Modules/StreamRaiders/streamRaiders.html
+++ b/src/Modules/StreamRaiders/streamRaiders.html
@@ -9,7 +9,7 @@
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
-<div id="skinathonRoad" class="bottom-center" style="display: none">
+<div id="skinathonRoad" class="bottom-center" style="bottom: -1000px">
     <img src="assets/RoadNormal.png" alt="" class="road-element road-bg">
     <img id="traveled" src="assets/RoadTraveled.png" alt="" class="road-element road-overlay">
     <img id="progress-panel" src="assets/ProgressPanel.png" alt="" class="absolute">
