Stream Raiders: Add "Advance" feature
This animates advancement on the road, with configurable speed in pixels per second.

--- a/src/Modules/StreamRaiders/streamRaiders.html
+++ b/src/Modules/StreamRaiders/streamRaiders.html
@@ -27,6 +27,7 @@
     <div id="milestones" class="bottom-left milestone-container">
     </div>
 </div>
+<div id="animator" class="animator"></div>
 
 <!--suppress HtmlUnknownTarget -->
 <script type="module" src="/common/moduleClient.mjs"></script>
