Stream Raiders: Add Emerald City

--- a/src/Modules/StreamRaiders/streamRaiders.html
+++ b/src/Modules/StreamRaiders/streamRaiders.html
@@ -26,6 +26,7 @@
     </div>
     <div id="milestones" class="bottom-left milestone-container">
     </div>
+    <img id="city" src="assets/EmeraldCity.png" alt="" class="city">
 </div>
 <div id="animator" class="animator"></div>
 
