Twister: Add debris entrance (throwIn)

--- a/src/Modules/Twister/tornado/main.html
+++ b/src/Modules/Twister/tornado/main.html
@@ -19,6 +19,7 @@
   <script type="text/javascript" src="spinner.js"></script>
   <script type="text/javascript" src="elevator.js"></script>
   <script type="text/javascript" src="distancer.js"></script>
+  <script type="text/javascript" src="mathUtils.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
