--- a/src/Modules/Twister/tornado/main.html
+++ b/src/Modules/Twister/tornado/main.html
@@ -8,7 +8,6 @@
   <title>Manual Motion with P5</title>
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.js"></script>
-  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script> -->
 
   <script type="text/javascript" src="../../../../lib/OpenSimplexNoise.js"></script>
   <script type="text/javascript" src="debris.js"></script>
@@ -20,6 +19,7 @@
   <script type="text/javascript" src="elevator.js"></script>
   <script type="text/javascript" src="distancer.js"></script>
   <script type="text/javascript" src="mathUtils.js"></script>
+  <script type="text/javascript" src="alphaShaderDefinition.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
