--- a/src/Modules/Twister/tornado/main.html
+++ b/src/Modules/Twister/tornado/main.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Manual Motion with P5</title>
+  <title></title>
+  <link rel="stylesheet" href="main.css">
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.js"></script>
 
