--- a/src/Modules/Twister/twister.html
+++ b/src/Modules/Twister/twister.html
@@ -5,19 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twister</title>
     <link rel="stylesheet" href="twister.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
 </head>
 <body>
 <iframe src="tornado/main.html" frameborder="0" id="frame"></iframe>
 <div id="main">
-    <h1 id="title">TORNADO WARNING!</h1>
+    <h1 id="title">⚠️ TORNADO WARNING! ⚠️</h1>
     <div id="content">
-        <div id="level">XY1</div>
+        <div id="level">EF1</div>
         <div id="progress-container">
             <div id="progress-bar">
                 <span id="progress-text">0%</span>
             </div>
         </div>
-        <div id="timer">12.34</div>
+        <div id="timer">12:34</div>
     </div>
 </div>
 <script type="module" src="twister.mjs"></script>
