--- a/src/Modules/Twister/twister.html
+++ b/src/Modules/Twister/twister.html
@@ -8,19 +8,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <iframe src="tornado/main.html" frameborder="0" id="frame"></iframe>
+<svg width="0" height="0">
+    <filter id="f" x="-50%" y="-200%" width="200%" height="500%" primitiveUnits="objectBoundingBox">
+        <feGaussianBlur stdDeviation=".025 .2"></feGaussianBlur>
+        <feColorMatrix type="saturate" values="1.3"></feColorMatrix>
+        <feBlend in="SourceGraphic"></feBlend>
+    </filter>
+</svg>
 <div id="main">
     <h1 id="title">⚠️ TORNADO WARNING! ⚠️</h1>
     <div id="content">
-        <div id="level">EF1</div>
+        <div id="level" class="ef1">EF1</div>
         <div id="progress-container">
             <div id="progress-bar">
                 <span id="progress-text">0%</span>
             </div>
         </div>
-        <div id="timer">12:34</div>
+        <div id="timer" class="timer-ef1">1:23</div>
     </div>
 </div>
 <script type="module" src="twister.mjs"></script>
