Twister: Watch/Warn titles, more styling

--- a/src/Modules/Twister/twister.html
+++ b/src/Modules/Twister/twister.html
@@ -20,7 +20,7 @@
     </filter>
 </svg>
 <div id="main">
-    <h1 id="title">⚠️ TORNADO WARNING! ⚠️</h1>
+    <h1 id="title" class="watch">🌪️ TORNADO WATCH! 🌪️</h1>
     <div id="content">
         <div id="level" class="ef1">EF1</div>
         <div id="progress-container">
