--- a/src/Modules/Twister/tornado/main.html
+++ b/src/Modules/Twister/tornado/main.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.js"></script>
 
   <script type="text/javascript" src="../../../../lib/OpenSimplexNoise.js"></script>
+  <script type="text/javascript" src="assets.js"></script>
   <script type="text/javascript" src="debris.js"></script>
   <script type="text/javascript" src="noiseGenerator.js"></script>
   <script type="text/javascript" src="tornado.js"></script>
