--- a/src/Modules/Twister/twister.html
+++ b/src/Modules/Twister/twister.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 <iframe src="tornado/main.html" frameborder="0" id="frame"></iframe>
@@ -19,7 +20,7 @@
         <feBlend in="SourceGraphic"></feBlend>
     </filter>
 </svg>
-<div id="main">
+<div id="main" style="display: none">
     <h1 id="title" class="watch">🌪️ TORNADO WATCH! 🌪️</h1>
     <div id="content">
         <div id="level" class="ef1">EF1</div>
@@ -31,6 +32,8 @@
         <div id="timer" class="timer-ef1">1:23</div>
     </div>
 </div>
+<script src="/socket.io/socket.io.js"></script>
+<script type="module" src="/common/moduleClient.mjs"></script>
 <script type="module" src="twister.mjs"></script>
 </body>
 </html>
