Twister: Add timer display logic

--- a/src/Modules/Twister/twister.html
+++ b/src/Modules/Twister/twister.html
@@ -29,7 +29,7 @@
                 <span id="progress-text">0%</span>
             </div>
         </div>
-        <div id="timer" class="timer-ef1">1:23</div>
+        <div id="timer" class="timer-ef1"></div>
     </div>
 </div>
 <script src="/socket.io/socket.io.js"></script>
