Twister: Hide details when tornado is inactive

--- a/src/Modules/Twister/twister.html
+++ b/src/Modules/Twister/twister.html
@@ -23,13 +23,13 @@
 <div id="main" style="display: none">
     <h1 id="title" class="watch">🌪️ TORNADO WATCH! 🌪️</h1>
     <div id="content">
-        <div id="level" class="ef1">EF1</div>
+        <div id="level" class="ef1" style="display: none">EF1</div>
         <div id="progress-container">
             <div id="progress-bar">
                 <span id="progress-text">0%</span>
             </div>
         </div>
-        <div id="timer" class="timer-ef1"></div>
+        <div id="timer" class="timer-ef1" style="display: none"></div>
     </div>
 </div>
 <script src="/socket.io/socket.io.js"></script>
