--- a/src/Modules/Twister/twister.html
+++ b/src/Modules/Twister/twister.html
@@ -24,7 +24,7 @@
     <h1 id="title" class="watch">🌪️ TORNADO WATCH! 🌪️</h1>
     <div id="content">
         <div id="level" class="ef1" style="display: none">EF1</div>
-        <div id="progress-container">
+        <div id="progress-container" style="display: none">
             <div id="progress-bar">
                 <span id="progress-text">0%</span>
             </div>
