Twister: Show/hide prize list functionality

--- a/src/Modules/Twister/twister.html
+++ b/src/Modules/Twister/twister.html
@@ -32,7 +32,7 @@
         </div>
         <div id="timer" class="timer-ef1" style="display: none"></div>
     </div>
-    <div id="prize-list-container" class="prize-list-container">
+    <div id="prize-list-container" class="prize-list-container" style="display: none">
         <div id="prize-list" class="prize-list"></div>
     </div>
 </div>
