--- a/src/Modules/Twister/twister.html
+++ b/src/Modules/Twister/twister.html
@@ -26,9 +26,8 @@
     <div id="content">
         <div id="level" class="ef1" style="display: none">EF1</div>
         <div id="progress-container" style="display: none">
-            <div id="progress-bar">
-                <span id="progress-text">0%</span>
-            </div>
+            <div id="progress-bar"></div>
+            <span id="progress-text">0%</span>
         </div>
         <div id="timer" class="timer-ef1" style="display: none"></div>
     </div>
